# davgit

./: .gitmodules  AGENTS.md  Cargo.toml  LICENSE  README.md
src/: cli.rs  fs.rs  git_bridge.rs  handler.rs  main.rs
src/git/: mod.rs  objects.rs  packfile.rs  repo.rs  transport.rs
tests/: litmus.rs
