[package]
name = "davgit"
version = "0.1.0"
edition = "2024"

[dependencies]
git2 = { version = "0.21", features = ["ssh"] }
dav-server = { version = "0.11", default-features = false }
tempfile = "3"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
bytes = "1"
futures-util = "0.3"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["full"] }
