[package]
name = "davgit"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
bytes = "1"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

# gix object model crates
gix-object = "0.62"
gix-hash = { version = "0.25", features = ["sha1"] }
gix-actor = "0.41"
smallvec = "1"

# git protocol support (pkt-line, packfile)
sha1 = "0.10"
flate2 = "1"
hex = "0.4"
russh = "0.61"
